{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 1197,
  "lineage": "52f62c5a-71ae-0ec3-47b6-174b4e1e6692",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "learning_platform_java_ami_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eabf696a86fe8296",
            "arn": "arn:aws:ec2:us-east-1:637423441868:instance/i-0a5aeceb127b8e077",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5aeceb127b8e077",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "learning-platform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-040a1d15ed24d72bd"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040a1d15ed24d72bd",
            "private_dns": "ip-10-0-2-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.50",
            "public_ip": "52.45.45.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-007cfc72864b5077c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9f268f3ead6be17",
            "tags": {
              "Name": "LearningPlatformInstance"
            },
            "tags_all": {
              "Name": "LearningPlatformInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a464cab82579ba4a"
            ]
          },
          "dependencies": [
            "module.networking.aws_network_interface.backend_nic",
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_subnet.learning_platform_private_subnet",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "backend_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6972192dd4d189d",
            "arn": "arn:aws:ec2:us-east-1:637423441868:elastic-ip/eipalloc-0f6972192dd4d189d",
            "associate_with_private_ip": "10.0.2.50",
            "association_id": "eipassoc-0a18d785ac82fa82f",
            "domain": "vpc",
            "id": "eipalloc-0f6972192dd4d189d",
            "instance": "i-0a5aeceb127b8e077",
            "network_border_group": "us-east-1",
            "network_interface": "eni-040a1d15ed24d72bd",
            "private_dns": "ip-10-0-2-50.ec2.internal",
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-52-45-45-87.compute-1.amazonaws.com",
            "public_ip": "52.45.45.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.learning_platform_java_ami_server",
            "module.networking.aws_internet_gateway.learning_platform_gw",
            "module.networking.aws_network_interface.backend_nic",
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_subnet.learning_platform_private_subnet",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f71fb2211cd8c33e",
            "arn": "arn:aws:ec2:us-east-1:637423441868:elastic-ip/eipalloc-0f71fb2211cd8c33e",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0ed1da42f025da55d",
            "domain": "vpc",
            "id": "eipalloc-0f71fb2211cd8c33e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-079aece2c46aa4a83",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-236-59-46.compute-1.amazonaws.com",
            "public_ip": "34.236.59.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.learning_platform_gw",
            "module.networking.aws_network_interface.frontend_nic",
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_subnet.learning_platform_public_subnet",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "learning_platform_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:internet-gateway/igw-0d8c9a30b264bfc78",
            "id": "igw-0d8c9a30b264bfc78",
            "owner_id": "637423441868",
            "tags": {
              "Name": "LPGateway"
            },
            "tags_all": {
              "Name": "LPGateway"
            },
            "vpc_id": "vpc-0c6d9dba3130c78fb"
          },
          "dependencies": [
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "backend_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:network-interface/eni-040a1d15ed24d72bd",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e9baac6cd97f9ccf",
                "device_index": 0,
                "instance": "i-0a5aeceb127b8e077"
              }
            ],
            "id": "eni-040a1d15ed24d72bd",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:71:7f:48:37:05",
            "owner_id": "637423441868",
            "private_ip": "10.0.2.50",
            "private_ip_list": [
              "10.0.2.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a464cab82579ba4a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9f268f3ead6be17"
          },
          "dependencies": [
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_subnet.learning_platform_private_subnet",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "frontend_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:network-interface/eni-079aece2c46aa4a83",
            "id": "eni-079aece2c46aa4a83",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:9b:60:0a:d0:f3",
            "owner_id": "637423441868",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a464cab82579ba4a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b96efe56b479c472"
          },
          "dependencies": [
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_subnet.learning_platform_public_subnet",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "learning_platform_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:route-table/rtb-05bd39881e29a59a2",
            "id": "rtb-05bd39881e29a59a2",
            "owner_id": "637423441868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8c9a30b264bfc78",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8c9a30b264bfc78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LPRouteTable"
            },
            "tags_all": {
              "Name": "LPRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6d9dba3130c78fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.learning_platform_gw",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aece96a541fce1db",
            "route_table_id": "rtb-05bd39881e29a59a2",
            "subnet_id": "subnet-0e9f268f3ead6be17"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.learning_platform_gw",
            "module.networking.aws_route_table.learning_platform_route_table",
            "module.networking.aws_subnet.learning_platform_private_subnet",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083c20f4f85e55d4a",
            "route_table_id": "rtb-05bd39881e29a59a2",
            "subnet_id": "subnet-0b96efe56b479c472"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.learning_platform_gw",
            "module.networking.aws_route_table.learning_platform_route_table",
            "module.networking.aws_subnet.learning_platform_public_subnet",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:security-group/sg-0a464cab82579ba4a",
            "description": "Allow SSH/HTTP/HTTPS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a464cab82579ba4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "637423441868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffic"
            },
            "tags_all": {
              "Name": "allow_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6d9dba3130c78fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "learning_platform_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:subnet/subnet-0e9f268f3ead6be17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9f268f3ead6be17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423441868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LPPrivateSubnet"
            },
            "tags_all": {
              "Name": "LPPrivateSubnet"
            },
            "vpc_id": "vpc-0c6d9dba3130c78fb"
          },
          "dependencies": [
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "learning_platform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:subnet/subnet-0b96efe56b479c472",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b96efe56b479c472",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423441868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LPPublicSubnet"
            },
            "tags_all": {
              "Name": "LPPublicSubnet"
            },
            "vpc_id": "vpc-0c6d9dba3130c78fb"
          },
          "dependencies": [
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "learning_platform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:vpc/vpc-0c6d9dba3130c78fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e1d94fe4523b902",
            "default_route_table_id": "rtb-0c976c10261420b4e",
            "default_security_group_id": "sg-009ca242bf7c68889",
            "dhcp_options_id": "dopt-0e5d543fa490d473e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6d9dba3130c78fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c976c10261420b4e",
            "owner_id": "637423441868",
            "tags": {
              "Name": "LPVpc"
            },
            "tags_all": {
              "Name": "LPVpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:security-group-rule/sgr-0668d5924f3611ac2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0668d5924f3611ac2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a464cab82579ba4a",
            "security_group_rule_id": "sgr-0668d5924f3611ac2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:security-group-rule/sgr-0cc791baa036f4aac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0cc791baa036f4aac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a464cab82579ba4a",
            "security_group_rule_id": "sgr-0cc791baa036f4aac",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:security-group-rule/sgr-0c4aaed9273c2226b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c4aaed9273c2226b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a464cab82579ba4a",
            "security_group_rule_id": "sgr-0c4aaed9273c2226b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:security-group-rule/sgr-062846077fbbc3c96",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-062846077fbbc3c96",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a464cab82579ba4a",
            "security_group_rule_id": "sgr-062846077fbbc3c96",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423441868:security-group-rule/sgr-09b62b787705369be",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-09b62b787705369be",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a464cab82579ba4a",
            "security_group_rule_id": "sgr-09b62b787705369be",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.allow_web_traffic",
            "module.networking.aws_vpc.learning_platform_vpc"
          ]
        }
      ]
    }
  ]
}